src/mta/visualizer/real/antlr/RealVisualParser.java
// Generated from /home/jaehun/git/maude-tls-attacker-tool/src/mta/visualizer/real/antlr/RealVisual.g4 by ANTLR 4.13.2
package mta.visualizer.real.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class RealVisualParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RECEIVEDMSG=1, SENDINGMSG=2, LAYERTYPE=3, MESSAGETYPE=4, RECORDTYPE=5, 
		TRUE=6, FALSE=7, NULL=8, EXPECTED=9, FAILS=10, ASSERTION=11, ACTUAL=12, 
		HANDSHAKETYPE=13, HANDSHAKELEN=14, PROTOCOL=15, RANDOM=16, SESSIONID=17, 
		SESSIONIDLEN=18, CIPHERSUITES=19, CIPHERSUITESLEN=20, COMPRESSION=21, 
		COMPRESSIONLEN=22, EXTENSION=23, EXTENSIONLEN=24, PSKKEYEXCHANGEMODES=25, 
		PSKKEYEXCHANGEMODESLEN=26, KEYSHARES=27, KEYSHARESLEN=28, SUPPORTEDVERSIONS=29, 
		SUPPORTEDVERSIONSLEN=30, ELLIPTICCURVE=31, ELLIPTICCURVELEN=32, SIGNATUREALGORITHM=33, 
		SIGNATUREALGORITHMLEN=34, CERTIFICATEENTRY=35, CERTIFICATEENTRYLEN=36, 
		CERTIFICATEVERIFYALGORITHM=37, SIGNATURE=38, SIGNATURELEN=39, VERIFYDATA=40, 
		ALERTLEV=41, ALERTDESC=42, CONTENTTYPE=43, VERSION=44, RECORDLEN=45, PUBLICKEY=46, 
		PUBLICKEYX=47, PUBLICKEYY=48, CURVETYPE=49, CERTIFICATETYPE=50, CERTIFICATETYPELNE=51, 
		DISTINGUISHEDNAME=52, DISTINGUISHEDNAMELEN=53, CHANGECIPHERSPECTYPE=54, 
		SERVERHELLODONE=55, ECPOINTFORMAT=56, ECPOINTFORMATLEN=57, CERTIFICATEREQUESTCONTEXT=58, 
		CERTIFICATEREQUESTCONTEXTLEN=59, LPAREN=60, RPAREN=61, COLON=62, DOT=63, 
		COMMA=64, RIGHTARROW=65, HEXVALUES=66, IDENT=67, WS=68;
	public static final int
		RULE_file = 0, RULE_statements = 1, RULE_sendStmt = 2, RULE_recvStmt = 3, 
		RULE_layers = 4, RULE_layer = 5, RULE_message = 6, RULE_content = 7, RULE_key = 8, 
		RULE_value = 9, RULE_alias = 10, RULE_bool = 11, RULE_assertion = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "statements", "sendStmt", "recvStmt", "layers", "layer", "message", 
			"content", "key", "value", "alias", "bool", "assertion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Received messages'", "'Sending messages'", "'LayerType'", "'MESSAGE'", 
			"'RECORD'", "'true'", "'false'", "'null'", "'expected'", "'fails'", "'Assertion'", 
			"'actual'", "'handshakeType'", "'handshakeLen'", "'protocol'", "'random'", 
			"'sessionID'", "'sessionIDLen'", "'cipherSuites'", "'cipherSuitesLen'", 
			"'compression'", "'compressionLen'", "'extension'", "'extensionLen'", 
			"'psk-key-exchange-modes'", "'psk-key-exchange-modes-len'", "'key-shares'", 
			"'key-shares-len'", "'supported-versions'", "'supported-versions-len'", 
			"'elliptic-curves'", "'elliptic-curves-len'", "'signature-algorithms'", 
			"'signature-algorithms-len'", "'certificateEntry'", "'certificateEntryLen'", 
			"'certificate-verify-algorithm'", "'signature'", "'signature-len'", "'verifyData'", 
			"'alertLev'", "'alertDesc'", "'contentType'", "'version'", "'recordLen'", 
			"'publicKey'", "'publicKeyX'", "'publicKeyY'", "'curveType'", "'certificateTypes'", 
			"'certificateTypesLen'", "'distinguishedNames'", "'distinguishedNamesLen'", 
			"'changeCipherSpecType'", "'ServerHelloDone'", "'ecPointFormat'", "'ecPointFormat-len'", 
			"'certificate-request-context'", "'certificate-request-context-len'", 
			"'('", "')'", "':'", "'.'", "','", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RECEIVEDMSG", "SENDINGMSG", "LAYERTYPE", "MESSAGETYPE", "RECORDTYPE", 
			"TRUE", "FALSE", "NULL", "EXPECTED", "FAILS", "ASSERTION", "ACTUAL", 
			"HANDSHAKETYPE", "HANDSHAKELEN", "PROTOCOL", "RANDOM", "SESSIONID", "SESSIONIDLEN", 
			"CIPHERSUITES", "CIPHERSUITESLEN", "COMPRESSION", "COMPRESSIONLEN", "EXTENSION", 
			"EXTENSIONLEN", "PSKKEYEXCHANGEMODES", "PSKKEYEXCHANGEMODESLEN", "KEYSHARES", 
			"KEYSHARESLEN", "SUPPORTEDVERSIONS", "SUPPORTEDVERSIONSLEN", "ELLIPTICCURVE", 
			"ELLIPTICCURVELEN", "SIGNATUREALGORITHM", "SIGNATUREALGORITHMLEN", "CERTIFICATEENTRY", 
			"CERTIFICATEENTRYLEN", "CERTIFICATEVERIFYALGORITHM", "SIGNATURE", "SIGNATURELEN", 
			"VERIFYDATA", "ALERTLEV", "ALERTDESC", "CONTENTTYPE", "VERSION", "RECORDLEN", 
			"PUBLICKEY", "PUBLICKEYX", "PUBLICKEYY", "CURVETYPE", "CERTIFICATETYPE", 
			"CERTIFICATETYPELNE", "DISTINGUISHEDNAME", "DISTINGUISHEDNAMELEN", "CHANGECIPHERSPECTYPE", 
			"SERVERHELLODONE", "ECPOINTFORMAT", "ECPOINTFORMATLEN", "CERTIFICATEREQUESTCONTEXT", 
			"CERTIFICATEREQUESTCONTEXTLEN", "LPAREN", "RPAREN", "COLON", "DOT", "COMMA", 
			"RIGHTARROW", "HEXVALUES", "IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RealVisual.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RealVisualParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				statements();
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RECEIVEDMSG || _la==SENDINGMSG );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public SendStmtContext sendStmt() {
			return getRuleContext(SendStmtContext.class,0);
		}
		public RecvStmtContext recvStmt() {
			return getRuleContext(RecvStmtContext.class,0);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			setState(39);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SENDINGMSG:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				sendStmt();
				}
				break;
			case RECEIVEDMSG:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(32);
				recvStmt();
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ASSERTION) {
					{
					{
					setState(33);
					assertion();
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SendStmtContext extends ParserRuleContext {
		public TerminalNode SENDINGMSG() { return getToken(RealVisualParser.SENDINGMSG, 0); }
		public TerminalNode LPAREN() { return getToken(RealVisualParser.LPAREN, 0); }
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RealVisualParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(RealVisualParser.COLON, 0); }
		public LayersContext layers() {
			return getRuleContext(LayersContext.class,0);
		}
		public SendStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sendStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterSendStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitSendStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitSendStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SendStmtContext sendStmt() throws RecognitionException {
		SendStmtContext _localctx = new SendStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sendStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(SENDINGMSG);
			setState(42);
			match(LPAREN);
			setState(43);
			alias();
			setState(44);
			match(RPAREN);
			setState(45);
			match(COLON);
			setState(46);
			layers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecvStmtContext extends ParserRuleContext {
		public TerminalNode RECEIVEDMSG() { return getToken(RealVisualParser.RECEIVEDMSG, 0); }
		public TerminalNode LPAREN() { return getToken(RealVisualParser.LPAREN, 0); }
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RealVisualParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(RealVisualParser.COLON, 0); }
		public LayersContext layers() {
			return getRuleContext(LayersContext.class,0);
		}
		public RecvStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recvStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterRecvStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitRecvStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitRecvStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecvStmtContext recvStmt() throws RecognitionException {
		RecvStmtContext _localctx = new RecvStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_recvStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(RECEIVEDMSG);
			setState(49);
			match(LPAREN);
			setState(50);
			alias();
			setState(51);
			match(RPAREN);
			setState(52);
			match(COLON);
			setState(53);
			layers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayersContext extends ParserRuleContext {
		public List<LayerContext> layer() {
			return getRuleContexts(LayerContext.class);
		}
		public LayerContext layer(int i) {
			return getRuleContext(LayerContext.class,i);
		}
		public LayersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterLayers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitLayers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitLayers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayersContext layers() throws RecognitionException {
		LayersContext _localctx = new LayersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_layers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(55);
				layer();
				}
				}
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LAYERTYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayerContext extends ParserRuleContext {
		public TerminalNode LAYERTYPE() { return getToken(RealVisualParser.LAYERTYPE, 0); }
		public TerminalNode COLON() { return getToken(RealVisualParser.COLON, 0); }
		public MessageContext message() {
			return getRuleContext(MessageContext.class,0);
		}
		public TerminalNode MESSAGETYPE() { return getToken(RealVisualParser.MESSAGETYPE, 0); }
		public TerminalNode RECORDTYPE() { return getToken(RealVisualParser.RECORDTYPE, 0); }
		public LayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterLayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitLayer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitLayer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayerContext layer() throws RecognitionException {
		LayerContext _localctx = new LayerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_layer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(LAYERTYPE);
			setState(61);
			match(COLON);
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==MESSAGETYPE || _la==RECORDTYPE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(63);
			message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MessageContext extends ParserRuleContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public MessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MessageContext message() throws RecognitionException {
		MessageContext _localctx = new MessageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_message);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921504606838784L) != 0)) {
				{
				{
				setState(65);
				content();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public TerminalNode EXTENSION() { return getToken(RealVisualParser.EXTENSION, 0); }
		public TerminalNode COLON() { return getToken(RealVisualParser.COLON, 0); }
		public TerminalNode NULL() { return getToken(RealVisualParser.NULL, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RealVisualListener ) ((RealVisualListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RealVisualVisitor ) return ((RealVisualVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_content);
		try {
			int _alt;
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXTENSION:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(EXTENSION);
				setState(72);
				match(COLON);
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case HANDSHAKETYPE:
				case HANDSHAKELEN:
				case PROTOCOL:
				case RANDOM:
				case SESSIONID:
				case SESSIONIDLEN:
				case CIPHERSUITES:
				case CIPHERSUITESLEN:
				case COMPRESSION:
				case COMPRESSIONLEN:
				case EXTENSION:
				case EXTENSIONLEN:
				case PSKKEYEXCHANGEMODES:
				case PSKKEYEXCHANGEMODESLEN:
				case KEYSHARES:
				case KEYSHARESLEN:
				case SUPPORTEDVERSIONS:
				case SUPPORTEDVERSIONSLEN:
				case ELLIPTICCURVE:
				case ELLIPTICCURVELEN:
				case SIGNATUREALGORITHM:
				case SIGNATUREALGORITHMLEN:
				case CERTIFICATEENTRY:
				case CERTIFICATEENTRYLEN:
				case CERTIFICATEVERIFYALGORITHM:
				case SIGNATURE:
				case SIGNATURELEN:
				case VERIFYDATA:
				case ALERTLEV:
				case ALERTDESC:
				case CONTENTTYPE:
				case VERSION:
				case RECORDLEN:
				case PUBLICKEY:
				case PUBLICKEYX:
				case PUBLICKEYY:
				case CURVETYPE:
				case CERTIFICATETYPE:
				case CERTIFICATETYPELNE:
				case DISTINGUISHEDNAME:
				case DISTINGUISHEDNAMELEN:
				case CHANGECIPHERSPECTYPE:
				case SERVERHELLODONE:
				case ECPOINTFORMAT:
				case ECPOINTFORMATLEN:
				case CERTIFICATEREQUESTCONTEXT:
				case CERTIFICATEREQUESTCONTEXTLEN:
					{
					setState(74); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(73);
							content();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(76); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					break;
				case NULL:
					{
					setState(78);
					match(NULL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case HANDSHAKETYPE:
			case HANDSHAKELEN:
			case PROTOCOL:
			case RANDOM:
			case SESSIONID:
			case SESSIONIDLEN:
			case CIPHERSUITES:
			case CIPHERSUITESLEN:
			case COMPRESSION:
			case COMPRESSIONLEN:
			case EXTENSIONLEN:
			case PSKKEYEXCHANGEMODES:
			case PSKKEYEXCHANGEMODESLEN:
			case KEYSHARES:
			case KEYSHARESLEN:
			case SUPPORTEDVERSIONS:
			case SUPPORTEDVERSIONSLEN:
			case ELLIPTICCURVE:
			case ELLIPTICCURVELEN:
			case SIGNATUREALGORITHM:
			case SIGNATUREALGORITHMLEN:
			case CERTIFICATEENTRY:
			case CERTIFICATEENTRYLEN:
			case CERTIFICATEVERIFYALGORITHM:
			case SIGNATURE:
			case SIGNATURELEN:
			case VERIFYDATA:
			case ALERTLEV:
			case ALERTDESC:
			case CONTENTTYPE:
			case VERSION:
			case RECORDLEN:
			case PUBLICKEY:
			case PUBLICKEYX:
			case PUBLICKEYY:
			case CURVETYPE:
			case CERTIFICATETYPE:
			case CERTIFICATETYPELNE:
			case DISTINGUISHEDNAME:
			case DISTINGUISHEDNAMELEN:
			case CHANGECIPHERSPECTYPE:
			case SERVERHELLODONE:
			case ECPOINTFORMAT:
			case ECPOINTFORMATLEN:
			case CERTIFICATEREQUESTCONTEXT:
			case CERTIFICATEREQUESTCONTEXTLEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				key();
				setState(82);
				match(COLON);
				setState(83);
				value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
